k8s/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    matchLabels:
      name: jenkins
  template:
    metadata:
      labels:
        name: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /var/jenkins_vol
            name: jenkins-vol
          - mountPath: /var/run/docker.sock
            name: docker-vol
          - mountPath: /usr/bin/docker
            name: docker-dem
          - mountPath: /var/lib/jenkins/
            name: jenkins-ho
          - mountPath: /var/jenkins_home
            name: jenkins-home
          - mountPath: /var/jenkins_home/jobs
            name: jenkins-job
      volumes:
        - name: jenkins-vol
          emptyDir: {}
        - name: docker-vol
          emptyDir: {}
        - name: docker-dem
          emptyDir: {}
        - name: jenkins-ho
          emptyDir: {}
        - name: jenkins-home
          emptyDir: {}
        - name: jenkins-job
          emptyDir: {}
